# gatttool-stripped

./: CMakeLists.txt
src/: log.c
src/shared/: tester.c
